refactor: Reuse method for analytics tables [DHIS2-16705] (#16490)