@@ -168,7 +168,7 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
             unused ->
                 categoryService.getAllCategoryOptionGroupSets().stream()
                     .filter(this::isTypeAttribute)
-                    .collect(Collectors.toList()))
+                    .toList())
         .orElse(List.of());
   }
 
@@ -184,15 +184,14 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
         .orElse(List.of());
   }
 
-  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
-      Program program) {
+  private List<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(Program program) {
     return Optional.of(program)
         .filter(Program::isRegistration)
         .map(Program::getTrackedEntityAttributes)
         .orElse(List.of())
         .stream()
         .filter(this::isNotConfidential)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private boolean isNotConfidential(TrackedEntityAttribute trackedEntityAttribute) {
